--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "dv-team/routing",
+	"name": "dv-team/router",
 	"description": "A simple routing library",
 	"homepage": "https://github.com/rkrx/php-simple-router",
 	"license": "MIT",
